--- a/React/adopt-me/package.json
+++ b/React/adopt-me/package.json
@@ -19,10 +19,12 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "parcel-bundler": "^1.12.1",
     "prettier": "^1.16.1"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
