Add reach router

--- a/React/adopt-me/package.json
+++ b/React/adopt-me/package.json
@@ -27,8 +27,10 @@
   },
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@reach/router": "^1.2.1",
+    "reach-router": "0.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "browserslist": [
     "last 2 Chrome versions"
