--- a/React/adopt-me/package.json
+++ b/React/adopt-me/package.json
@@ -14,7 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.0",
     "eslint": "^5.12.1",
     "eslint-config-prettier": "^4.0.0",
