--- a/React/adopt-me/package.json
+++ b/React/adopt-me/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.2.1",
+    "moment": "^2.24.0",
     "reach-router": "0.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
