--- a/React/adopt-me/package.json
+++ b/React/adopt-me/package.json
@@ -34,7 +34,9 @@
     "@reach/router": "^1.2.1",
     "reach-router": "0.0.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "browserslist": [
     "last 2 Chrome versions"
